// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query allows passing no data message 1`] = `"no data"`;

exports[`Query allows rendering custom error component with extra props 1`] = `
<span>
  error
   
  extra
</span>
`;

exports[`Query allows rendering custom loading component with extra props 1`] = `
<span>
  loading... 
  extra
</span>
`;

exports[`Query renders children callback when data in not empty 1`] = `
<span>
  data
</span>
`;

exports[`Query renders children component when data in not empty 1`] = `
<span>
  data
</span>
`;

exports[`Query renders custom prop component with extra props 1`] = `
<span>
  data
   
  extra
</span>
`;

exports[`Query renders data even when pending is positive if showLoaderDuringRefetch is false 1`] = `"data"`;

exports[`Query renders null when custom isDataEmpty returns true 1`] = `null`;

exports[`Query renders null when data is empty array by default 1`] = `null`;

exports[`Query renders null when data is falsy by default 1`] = `null`;

exports[`Query renders null when error is truthy by default 1`] = `null`;

exports[`Query renders null when pending is positive by default 1`] = `null`;
